Fix T56511: UILayout.prop_search misaligned

Add padding when used with property decorations.